# siesta-agent

./: README.md  in.fdf
docs/siesta-5.4.0/: CMakeLists.txt  Contributors.txt  Makefile  REPORTING_BUGS  compatibility.tex  doxygen.cfg.in  ford.cfg.in  siesta.bib  siesta.tex  tbtrans.tex  user_guide.tex
docs/siesta-5.4.0/developer/: ford-siesta.md
docs/siesta-5.4.0/developer/ford-pages/: index.md
docs/siesta-5.4.0/developer/ford-pages/implementation/: 2-wavefunction-phases.md  qmmm-implementation.md
docs/siesta-5.4.0/manual_tex/: README.md  cut_pandoc_file.py  get_manual.sh  pandoc_filter.py  rst_siesta_manual.tex  sphinx_commands.tex
docs/siesta-5.4.0/release/: 5.4.0-notes.md  ReleaseNotes_upto_5.2.2.md
docs/siesta-5.4.0/tex/helpers/: fdf.tex  init.tex  packages.tex  physics.tex  variables.tex
docs/siesta-5.4.0/tex/sections/: Acknowledgements.tex  Analysis_tools.tex  Compilation.tex  Contributors.tex  DFT+U.tex  Data_structures.tex  Execution.tex  External_control.tex  FDF.tex  Fdf_units.tex  Introduction.tex  Options.tex  Output.tex  Precision_selection.tex  Problem_handling.tex  QMMM.tex  RT-TDDFT.tex  Relaxation_phonons_md.tex  Reporting_bugs.tex  Scripting.tex  TranSIESTA.tex  XML_output.tex
docs/siesta-5.4.0/tex/sections/Options/: Auxiliary_force_field.tex  Band_structure_analysis.tex  Basis_set_and_KB_projectors.tex  CheSS.tex  Chemical_analysis.tex  Density_of_states.tex  ELSI.tex  Efficiency.tex  Electronic_structure.tex  General_system_descriptors.tex  GrimmeD3.tex  HS_matrix_elements.tex  K_point_sampling.tex  Macroscopic_polarization.tex  Netcharge_dipole_Efield.tex  Optical.tex  Output_cdf.tex  PEXSI.tex  (+14 more)
(+36 files in other folders)
